# pz-battlesnake

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  Makefile  README.md  index.html  objects.inv  pyproject.toml  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: base_env.doctree  constants.doctree  spaces.doctree
.doctrees/content/: custom_enviorment.doctree  getting_started.doctree  install.doctree
.doctrees/environments/: duels.doctree  lava_bridges.doctree  maze.doctree  solo.doctree  standard.doctree  wrapped_chaos.doctree
.github/: PULL_REQUEST.md
.github/ISSUE_TEMPLATES/: bug.md
.github/workflows/: gh-pages.yml
_modules/: index.html
_sources/: index.md.txt
_sources/content/: getting_started.md.txt
_sources/environments/: duels.md.txt  solo.md.txt  standard.md.txt
_static/: documentation_options.js
api/base_env/: index.html
api/constants/: index.html
api/spaces/: index.html
battlesnake/: battlesnake.go  game.go  gamestate.go  go.mod  go.sum  helpers.go  json.go  main.go  singleton.go  types.go
content/custom_enviorment/: index.html
content/getting_started/: index.html
content/install/: index.html
docs/source/: conf.py  index.md
environments/duels/: index.html
environments/lava_bridges/: index.html
environments/maze/: index.html
example/: duels.py  duels_25x25.py  main.py  maze.py  solo.py  standard.py
genindex/: index.html
pz_battlesnake/: base_env.py  constants.py  main.py  solo.py  wrapper.py
search/: index.html
(+29 files in other folders)
