[tool.poetry]
name = "pz_battlesnake"
version = "0.1.0"
description = ""
authors = ["Bultz <27208227+DaBultz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PettingZoo = "^1.18.1"
Sphinx = "^5.0.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
