[tool.poetry]
name = "pz_battlesnake"
version = "0.1.0"
description = ""
authors = ["Bultz <27208227+DaBultz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gym = "^0.24.0"
PettingZoo = "^1.19.0"

[tool.poetry.dev-dependencies]
black = {version = "22.3.0", allow-prereleases = true}
furo = "2022.6.4"
Sphinx = "5.0.2"
myst-parser = "0.18.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
